# enkidu2

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/CLI11/: CMakeLists.txt
libs/linenoise/: CMakeLists.txt
libs/linenoise/example/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: NodeMatrix.hpp  State.hpp
src/core/include/enkidu/app/: Version.hpp
src/core/include/enkidu/model/: Action.hpp  ActionOutcome.hpp  Actions.hpp  Connection.hpp  Error.hpp  Model.hpp  Node.hpp  ReducerHelpers.hpp  Reducers.hpp  SideEffect.hpp  SideEffects.hpp
src/core/include/enkidu/udf/: Action.hpp  Reducer.hpp  Reduction.hpp  Selector.hpp  SideEffect.hpp  Store.hpp
src/core/include/enkidu/utility/: Assert.hpp  flatten_variants.hpp  is_one_of.hpp  overload.hpp
src/core/include/model/: Action.hpp  Actions.hpp  Connection.hpp  Error.hpp  Id.hpp  Model.hpp  Node.hpp  NodeMatrix.hpp  Reducer.hpp  ReducerHelpers.hpp  Reducers.hpp  Selector.hpp  SideEffect.hpp  SideEffects.hpp  Store.hpp  Subscription.hpp
src/core/include/udf/: Action.hpp  Reducer.hpp  Reduction.hpp  Selector.hpp  Store.hpp  Subscription.hpp
src/core/include/utility/: registry.hpp
src/core/src/model/: Node.cpp  ReducerHelpers.cpp  Reducers.cpp
src/core/tests/: CMakeLists.txt  CatchConfigMain.hpp  ConnectionsTest.cpp  ModelTest.cpp  UDFTest.cpp  UtilitiesTest.cpp
src/headless/: CMakeLists.txt  main.cpp
src/headless/include/: Application.hpp  HeadlessApplication.hpp
src/headless/include/headless/app/: Application.hpp  Command.hpp  DispatchCommand.hpp  Input.hpp  OnError.hpp  Parser.hpp  Show.hpp
src/headless/include/headless/model/: Action.hpp  SideEffect.hpp  Store.hpp
src/headless/src/: Application.cpp  main.cpp
src/headless/src/app/: Application.cpp  Input.cpp  OnError.cpp  Parser.cpp  Show.cpp
src/headless/tests/: ApplicationTest.cpp  CMakeLists.txt  ParserTest.cpp
